--- a/gb/16/10/17/n8406439.md
+++ b/gb/16/10/17/n8406439.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rtnvmb3322/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rtnvmb3322/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rtnvmb3322/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rtnvmb3322/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rtnvmb3322/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2016侨营台湾美食标章    华府两餐厅获奖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/10/1-120-e1476731828109-600x384.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2016年10月18日讯】（大纪元记者何伊美国华盛顿DC报导）第四届<ahref="https://github.com/rtnvmb3322/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%BE%8E%E9%A3%9F.md#1">台湾美食</a><ahref="https://github.com/rtnvmb3322/djy/blob/master/gb/tag/%E9%A4%90%E5%8E%85.md#1">餐厅</a>评选结果已揭晓，大华府地区的祥龙和顶鲜台湾料理两家餐厅荣获“2016侨营台湾美食标章”。10月14日，授证仪式在双橡园举行。<br />
-中华民国驻美大使高硕泰与侨务委员会委员参加了此次颁奖典礼，高硕泰大使亲自为获奖<ahref="https://github.com/rtnvmb3322/djy/blob/master/gb/tag/%E9%A4%90%E5%8E%85.md#1">餐厅</a>颁发获奖证书。</p>
-<p>侨营<ahref="https://github.com/rtnvmb3322/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%BE%8E%E9%A3%9F.md#1">台湾美食</a>餐厅评选自2013年开始举办，范围覆盖美加地区，由侨务委员会委托中卫发展中心于海外推行举办，并辅以“侨营台湾美食标章”的授予，让国际社会及侨民更容易识别具优质台湾风味美食的餐馆，并推广台湾美食在海外主流社会的知名度。通过评选的餐厅均会贴上“侨营台湾美食标章”，方便爱好美食的消费者能循此标章，品尝到优质的台湾美食。迄今已在美国纽约、洛杉矶、旧金山、华府及加拿大多伦多和温哥华等13个地区，累计甄选出近百家侨营台湾美食餐厅。</p>
+	<p>【大纪元2016年10月18日讯】（大纪元记者何伊美国华盛顿DC报导）第四届<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%BE%8E%E9%A3%9F.md#1">台湾美食</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A4%90%E5%8E%85.md#1">餐厅</a>评选结果已揭晓，大华府地区的祥龙和顶鲜台湾料理两家餐厅荣获“2016侨营台湾美食标章”。10月14日，授证仪式在双橡园举行。<br />
+中华民国驻美大使高硕泰与侨务委员会委员参加了此次颁奖典礼，高硕泰大使亲自为获奖<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A4%90%E5%8E%85.md#1">餐厅</a>颁发获奖证书。</p>
+<p>侨营<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%BE%8E%E9%A3%9F.md#1">台湾美食</a>餐厅评选自2013年开始举办，范围覆盖美加地区，由侨务委员会委托中卫发展中心于海外推行举办，并辅以“侨营台湾美食标章”的授予，让国际社会及侨民更容易识别具优质台湾风味美食的餐馆，并推广台湾美食在海外主流社会的知名度。通过评选的餐厅均会贴上“侨营台湾美食标章”，方便爱好美食的消费者能循此标章，品尝到优质的台湾美食。迄今已在美国纽约、洛杉矶、旧金山、华府及加拿大多伦多和温哥华等13个地区，累计甄选出近百家侨营台湾美食餐厅。</p>
 <p>今年的“侨营台湾美食标章”美食餐厅评选从7月11日持续至8月14日，美加地区共计有50家餐厅荣获“侨营台湾美食标章”。</p>
 <p>责任编辑：夏实</p>
 	
@@ -15,42 +15,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/12/6/30/n3624566.md#1">十大人气店  台湾美食月留香</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/15/9/28/n4537803.md#1">纽约六餐馆获颁“台湾美食”标章</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/16/4/4/n7520025.md#1">身在台湾好幸福 荷兰国家地理杂志赞台湾美食</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/16/7/20/n8117635.md#1">台湾美食全球最美味 老外大赞好吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/6/30/n3624566.md#1">十大人气店  台湾美食月留香</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/9/28/n4537803.md#1">纽约六餐馆获颁“台湾美食”标章</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/4/n7520025.md#1">身在台湾好幸福 荷兰国家地理杂志赞台湾美食</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/20/n8117635.md#1">台湾美食全球最美味 老外大赞好吃</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11027279.md#1" target="_blank">孙盛起：总会有无畏的勇士记录历史的真实</a></li><li><a href="https://github.com/rtnvmb3322/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242880.md#1" target="_blank">美加政要褒奖法轮大法 宣布大法日大法月</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/3/n12521135.md#1">【一线采访视频版】上海大量实体店现倒闭潮</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12520689.md#1">【远见快评】最后冲刺 川普人气爆棚 奥拜尴尬</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/10/15/n12477281.md#1">【欺世大观】黄继光堵枪眼官媒3版本 军方悄否定</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12518949.md#1">悄悄通过验收 三峡工程验收委主任是谁？</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/1/n12518020.md#1">大主教再致信川普：神在您身旁 凡事都能做</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12519251.md#1">签名遇妇人暖送1卷大钞 澎恰恰泪崩：我会加油</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12520365.md#1">昆凌分享儿女吃饭趣事 小周周获赞心智超成熟</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/1/n12517068.md#1">英国富豪拟用空气生产钻石 成本低又环保</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12519131.md#1">印男兜售“阿拉丁神灯” 还伪装精灵冒出来</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
-<li><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/20/11/2/n12518854.md#1">美国孕妇出现阵痛 坚持投完票才去医院分娩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rtnvmb3322/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rtnvmb3322/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/17/n8406439.htm">2016侨营台湾美食标章    华府两餐厅获奖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/17/n8406439.htm">2016侨营台湾美食标章    华府两餐厅获奖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rtnvmb3322/djy/blob/master/gb/16/10/17/n8406439.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rtnvmb3322/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rtnvmb3322/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rtnvmb3322/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rtnvmb3322/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/10/17/n8406439.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
